fix: from display to visibility

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -30,7 +30,8 @@ html {
 
 @media only screen and (min-width:600px){
   .discounts{
-    display: none;
+    visibility: hidden;
+    
   }
 }
 
